--- a/mainWindow.html
+++ b/mainWindow.html
@@ -5,7 +5,9 @@
     <meta http-equiv="Content-Security-Policy" content="default-src 'self';img-src 'self' data:;">
     <title>messdienerplaner</title>
     <link rel="stylesheet" href="style.css">
-    <script src="mainWindow_script.js"></script>
+    <link rel="stylesheet" href="node-snackbar/snackbar.min.css">
+    <script defer src="node-snackbar/snackbar.min.js"></script>
+    <script defer src="mainWindow_script.js"></script>
   </head>
   <body>
     <section id="layout">
